top banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robin's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome here!</h1>
+            <h1>I'm <span class="orange-color"> Rakibul Hassan</span></h1>
+            <h3>Designing and Building Websites</h3>
+            <p>I am a web developer from Dhaka, Bangladesh. My expertise is in the area of responsive web design.
+                I enjoy creating beautiful interfaces, building interactive and functional web sites.
+                I can also do programming, research works, writing reports. I really have a beautiful taste in
+                technology.
+                Currently I am doing web development course from programming hero to sharpening my skills and to do more
+                projects.
+            </p>
+            <a class="hireme_button" target="_blank" href="https://www.linkedin.com/in/robinrakibul/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="img/image-first-image.png" alt="index-first-image">
+        </div>
+    </section>
 </body>
+
 </html>
