second section added

--- a/index.html
+++ b/index.html
@@ -22,14 +22,28 @@
                 I enjoy creating beautiful interfaces, building interactive and functional web sites.
                 I can also do programming, research works, writing reports. I really have a beautiful taste in
                 technology.
-                Currently I am doing web development course from programming hero to sharpening my skills and to do more
-                projects.
             </p>
-            <a class="hireme_button" target="_blank" href="https://www.linkedin.com/in/robinrakibul/">HIRE ME</a>
+            <a class="link_button" target="_blank" href="https://www.linkedin.com/in/robinrakibul/">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="img/image-first-image.png" alt="index-first-image">
+            <img src="img/image-first.png" alt="index-first-image">
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="img/image-second.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>
+                I know Ui designing and also know how to convert them to websites. I already learned HTML, CSS.
+                Currently I am doing web development course from programming hero to learn javascript and advanced
+                works. My goal is to build websites professionally.
+            </p>
+            <a class="link_button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
     </section>
 </body>
 
