--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome here!</h1>
             <h1>I'm <span class="orange-color"> Rakibul Hassan</span></h1>
@@ -29,7 +29,7 @@
             <img src="img/image-first.png" alt="index-first-image">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="img/image-second.png" alt="">
         </div>
@@ -43,8 +43,32 @@
             </p>
             <a class="link_button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
-
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laborum rem similique molestiae
+                    blanditiis
+                    voluptates enim sunt labore ipsam modi? Quidem velit blanditiis ab sint vel libero, labore nemo
+                    minus.
+                </p>
+            </div>
+            <div id="front-end-experience" class="experience-item">
+                <h2>Front-end Web Developer</h2>
+                <h3 class="orange-color">2022-2024 | Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime eius odit illo, nostrum optio
+                    nisi
+                    velit, voluptate dicta vero mollitia fugiat reprehenderit ipsam ex eum possimus, dolor tempore iure!
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Rakibul Hassan Robin 2022, A Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
